--- a/tutorial/Week-1/notebook.ipynb
+++ b/tutorial/Week-1/notebook.ipynb
@@ -281,10 +281,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import configparser\n",
-    "\n",
     "from langchain.chat_models import ChatOpenAI\n",
     "from src.initialization import credential_init\n",
+    "from src.io.path_definition import get_project_dir\n",
     "\n",
     "\n",
     "credential_init()\n",
