--- a/tutorial/Week-2/notebook.ipynb
+++ b/tutorial/Week-2/notebook.ipynb
@@ -55,6 +55,7 @@
     "from langchain.output_parsers import StructuredOutputParser, ResponseSchema\n",
     "\n",
     "from src.initialization import credential_init\n",
+    "from src.io.path_definition import get_project_dir\n",
     "\n",
     "credential_init()\n",
     "\n",
@@ -79,18 +80,6 @@
     "    tokenized_corpus.append(recipe['ingredients'])\n",
     "\n",
     "bm25 = BM25Okapi(tokenized_corpus)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4526cced-9758-46ee-8d09-ced24ff81455",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "format_instructions"
    ]
   },
   {
@@ -1381,6 +1370,7 @@
    "outputs": [],
    "source": [
     "from langchain_core.runnables import RunnablePassthrough\n",
+    "\n",
     "\n",
     "chain = {\"context\": itemgetter(\"query\")|retriever, \"question\":itemgetter(\"question\")} | prompt | model | output_parser"
    ]
