--- a/tutorial/Week-6/Week-6_Llama3.ipynb
+++ b/tutorial/Week-6/Week-6_Llama3.ipynb
@@ -254,26 +254,58 @@
    "source": [
     "tokenizer = create_tokenizer()\n",
     "\n",
-    "# tokenizer.pad_token = tokenizer.eos_token\n",
-    "tokenizer.pad_token = \"<|end_of_text|>\"\n",
+    "\"\"\"\n",
+    "Source Code:\n",
+    "\n",
+    "if generation_config.pad_token_id is None and generation_config.eos_token_id is not None:\n",
+    "    if model_kwargs.get(\"attention_mask\") is None:\n",
+    "        logger.warning(\n",
+    "            \"The attention mask and the pad token id were not set. As a consequence, you may observe \"\n",
+    "            \"unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\"\n",
+    "        )\n",
+    "    eos_token_id = generation_config.eos_token_id\n",
+    "    if isinstance(eos_token_id, list):\n",
+    "        eos_token_id = eos_token_id[0]\n",
+    "    logger.warning(f\"Setting `pad_token_id` to `eos_token_id`:{eos_token_id} for open-end generation.\")\n",
+    "    generation_config.pad_token_id = eos_token_id\n",
+    "\n",
+    "Discussion on the eos_token_id:\n",
+    "\n",
+    "https://github.com/vllm-project/vllm/issues/4180\n",
+    "\"\"\"\n",
+    "\n",
     "\n",
     "terminators = [\n",
-    "    tokenizer.eos_token_id,\n",
-    "    tokenizer.convert_tokens_to_ids(\"<|eot_id|>\"),\n",
     "    tokenizer.convert_tokens_to_ids(\"<|end_of_text|>\")\n",
+    "    tokenizer.convert_tokens_to_ids(\"<|eot_id|>\"),\n",
     "]\n",
     "\n",
     "generate_text = transformers.pipeline(\n",
     "    model=model, tokenizer=tokenizer,\n",
-    "    return_full_text=False,  # langchain expects the full text\n",
+    "    return_full_text=False,\n",
     "    task='text-generation',\n",
-    "    stopping_criteria=stopping_criteria,\n",
     "    temperature=0.5,  # 'randomness' of outputs, 0.0 is the min and 1.0 the max\n",
     "    do_sample=True,\n",
     "    eos_token_id=terminators,\n",
     "    max_new_tokens=512,  # mex number of tokens to generate in the output\n",
     "    repetition_penalty=1.2,  # without this output begins repeating\n",
-    "    top_p=0.5)"
+    "    top_p=0.5,\n",
+    "    pad_token_id = tokenizer.convert_tokens_to_ids(\"<|eot_id|>\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- stopping_criteria (StoppingCriteriaList, optional)\n",
+    "\n",
+    "    - Custom stopping criteria that complements the default stopping criteria built from arguments and a generation config. If a stopping criteria is passed that is already created with the arguments or a generation config an error is thrown. If your stopping criteria depends on the scores input, make sure you pass return_dict_in_generate=True, output_scores=True to generate. This feature is intended for advanced users.\n",
+    "\n",
+    "- Special tokens that can be used at generation time\n",
+    "\n",
+    "    - pad_token_id (int, optional) — The id of the padding token.\n",
+    "    - bos_token_id (int, optional) — The id of the beginning-of-sequence token.\n",
+    "    - eos_token_id (Union[int, List[int]], optional) — The id of the end-of-sequence token. Optionally, use a list to set multiple end-of-sequence tokens."
    ]
   },
   {
