--- a/tutorial/Week-5/notebook.ipynb
+++ b/tutorial/Week-5/notebook.ipynb
@@ -762,6 +762,110 @@
    "source": [
     "### split code: https://python.langchain.com/v0.1/docs/modules/data_connection/document_transformers/code_splitter/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04a205d1-e99a-4460-a20c-c8041c76f9af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from semantic_router.encoders import HuggingFaceEncoder\n",
+    "\n",
+    "encoder = HuggingFaceEncoder()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abc49a36-1aa0-4447-9fdb-f48a8994b0ac",
+   "metadata": {},
+   "source": [
+    "## Semantic Splitting\n",
+    "\n",
+    "- StatisticalChunker (text)\n",
+    "- ConsecutiveChunker (text, audio)\n",
+    "- CumulativeChunker (text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0fcbca0-7380-4055-bf11-77f9fa44ecea",
+   "metadata": {},
+   "source": [
+    "### StatisticalChunker\n",
+    "\n",
+    "The statistical chunking method our most robust chunking method, it uses a varying similarity threshold to identify more dynamic and local similarity splits. It offers a good balance between accuracy and efficiency but can only be used for text documents (unlike the multi-modal ConsecutiveChunker).\n",
+    "\n",
+    "The StatisticalChunker can automatically identify a good threshold value to use while chunking our text, so it tends to require less customization than our other chunkers.\n",
+    "\n",
+    "最強大的分塊方法是統計分塊方法，它使用變化的相似度閾值來識別更多動態和本地相似度的分割。它在準確性和效率之間提供了良好的平衡，但只能用於文本文件（與多模態的連續分塊器不同）。\n",
+    "\n",
+    "統計分塊器可以自動識別一個好的閾值來用於分塊我們的文本，因此它通常比我們的其他分塊器需要更少的定制。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce1e7ef7-4d5e-4382-abca-3d1cb393e9af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from semantic_chunkers import StatisticalChunker\n",
+    "\n",
+    "chunker = StatisticalChunker(encoder=encoder)\n",
+    "\n",
+    "chunks = chunker(docs=[text])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cc87a09-b84a-430c-93e8-ce69a1249292",
+   "metadata": {},
+   "source": [
+    "### Consecutive Chunking\n",
+    "\n",
+    "Consecutive chunking is the simplest version of semantic chunking.\n",
+    "\n",
+    "連續分塊是語義分塊最簡單的版本。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83cd5c0c-f4e7-4542-a659-b90014713d19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from semantic_chunkers import ConsecutiveChunker\n",
+    "\n",
+    "chunker = ConsecutiveChunker(encoder=encoder, score_threshold=0.3)\n",
+    "\n",
+    "chunks = chunker(docs=[text])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b39ce94c-e008-436d-a2c3-b9f148eb7f70",
+   "metadata": {},
+   "source": [
+    "## Cumulative Chunking\n",
+    "\n",
+    "Cumulative chunking is a more compute intensive process, but can often provide more stable results as it is more noise resistant. However, it is very expensive in both time and (if using APIs) money."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb63778c-ca98-41bd-b6f2-5d2f948376b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from semantic_chunkers import CumulativeChunker\n",
+    "\n",
+    "chunker = CumulativeChunker(encoder=encoder, score_threshold=0.3)\n",
+    "\n",
+    "chunks = chunker(docs=[text])"
+   ]
   }
  ],
  "metadata": {
