--- a/tutorial/Week-6/Week-6_Llama3.ipynb
+++ b/tutorial/Week-6/Week-6_Llama3.ipynb
@@ -152,14 +152,14 @@
     "\n",
     "    def __call__(self, input_ids: torch.LongTensor, scores: torch.FloatTensor, **kwargs) -> bool:\n",
     "\n",
-    "    global stop_token_ids\n",
-    "\n",
-    "    # print(f\"input_ids: {input_ids}\")\n",
-    "    # print(f\"content: { tokenizer.decode(input_ids[0])}\")\n",
-    "    for stop_ids in stop_token_ids:\n",
-    "        if torch.eq(input_ids[0][-len(stop_ids):], stop_ids).all():\n",
-    "              # print(\"Stopping\")\n",
-    "            return True\n",
+    "        global stop_token_ids\n",
+    "    \n",
+    "        # print(f\"input_ids: {input_ids}\")\n",
+    "        # print(f\"content: { tokenizer.decode(input_ids[0])}\")\n",
+    "        for stop_ids in stop_token_ids:\n",
+    "            if torch.eq(input_ids[0][-len(stop_ids):], stop_ids).all():\n",
+    "                  # print(\"Stopping\")\n",
+    "                return True\n",
     "    return False"
    ]
   },
@@ -276,7 +276,7 @@
     "\n",
     "\n",
     "terminators = [\n",
-    "    tokenizer.convert_tokens_to_ids(\"<|end_of_text|>\")\n",
+    "    tokenizer.convert_tokens_to_ids(\"<|end_of_text|>\"),\n",
     "    tokenizer.convert_tokens_to_ids(\"<|eot_id|>\"),\n",
     "]\n",
     "\n",
