update the Week-5 content

--- a/tutorial/Week-5/notebook.ipynb
+++ b/tutorial/Week-5/notebook.ipynb
@@ -30,7 +30,7 @@
     "        <img src=\"nDATs9kmQk7sNrx5ELrhZ.png\" height=\"900\" width=\"600\" />\n",
     "    </div>\n",
     "    <div>\n",
-    "        <img src=\"yghzBMOFHZRKGvRuw6AM6.png\" height=\"900\" width=\"600\" />\n",
+    "        <img src=\"754703591882697477.png\" height=\"900\" width=\"600\" />\n",
     "    </div>\n",
     "</div>\n",
     "\"\"\"\n",
@@ -99,9 +99,6 @@
     "\n",
     "def image_to_base64(image_path):\n",
     "    \n",
-    "    # Convert Image to Base64 String\n",
-    "    \n",
-    "    # Open the Image:\n",
     "    with Image.open(image_path) as image:\n",
     "        \n",
     "        # Save the Image to a Buffer\n",
@@ -136,8 +133,7 @@
    "source": [
     "from src.io.path_definition import get_project_dir\n",
     "\n",
-    "\n",
-    "image_str = image_to_base64(os.path.join(get_project_dir(), 'tutorial/Week-5/nDATs9kmQk7sNrx5ELrhZ.png'))"
+    "image_str = image_to_base64(os.path.join(get_project_dir(), 'tutorial/Week-5/754703591882697477.png'))"
    ]
   },
   {
@@ -185,6 +181,74 @@
    "outputs": [],
    "source": [
     "chain.invoke(input={})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6ec6d71-c535-4be7-a95a-9fc561eb53d2",
+   "metadata": {},
+   "source": [
+    "## Make the input image as a dynamic variable\n",
+    "\n",
+    "- With PromptTemplate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06bce1bb-8ba8-4be1-b8c4-4748fbf9c747",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.prompts import HumanMessagePromptTemplate\n",
+    "\n",
+    "human_message_template = HumanMessagePromptTemplate.from_template(\n",
+    "    template=[\n",
+    "        {'type': 'text', 'text': 'What is in this image?'},\n",
+    "        {'type': 'image_url', 'image_url': {'url': 'data:image/jpeg;base64,{image_str}'}}\n",
+    "    ],\n",
+    ")\n",
+    "\n",
+    "# Create a Prompt Template\n",
+    "prompt = ChatPromptTemplate.from_messages([human_message_template])\n",
+    "\n",
+    "# Generate the Chain\n",
+    "chain = prompt|model\n",
+    "\n",
+    "chain.invoke(input={\"image_str\": image_str})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1754f003-b076-4979-a87f-e46dcf6ed947",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "human_message_template = HumanMessagePromptTemplate.from_template(\n",
+    "    template=[\n",
+    "        {'type': 'text', 'text': '{question}'},\n",
+    "        {'type': 'image_url', 'image_url': {'url': 'data:image/jpeg;base64,{image_str}'}}\n",
+    "    ],\n",
+    ")\n",
+    "\n",
+    "# Create a Prompt Template\n",
+    "prompt = ChatPromptTemplate.from_messages([human_message_template])\n",
+    "\n",
+    "# Generate the Chain\n",
+    "chain = prompt|model\n",
+    "\n",
+    "chain.invoke(input={\"image_str\": image_str, \"question\": \"Are you able to connect this image with any anime character?\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5dd542e-8ca5-45d0-bba1-1e2749f1788e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain.invoke(input={\"image_str\": image_str, \"question\": \"Are you able to connect this image with any anime character? Hint: Azur Lane.\"})"
    ]
   },
   {
@@ -866,6 +930,24 @@
     "\n",
     "chunks = chunker(docs=[text])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51cb2a8b-6f54-4db0-9b0d-a15dc278dac6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chunks[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fdd683e-b80b-4913-b32f-371e97977092",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
