--- a/tutorial/Week-1/notebook.ipynb
+++ b/tutorial/Week-1/notebook.ipynb
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7f7fb3d0-40bf-43b7-831f-b710d7278aec",
    "metadata": {},
    "outputs": [],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "39e2079a-4283-4220-b5ad-1517b07deb39",
    "metadata": {},
    "outputs": [],
@@ -289,7 +289,7 @@
     "credential_init()\n",
     "\n",
     "model = ChatOpenAI(openai_api_key=os.environ['OPENAI_API_KEY'],\n",
-    "                   model_name=\"gpt-4o-2024-05-13\", \n",
+    "                   model_name=\"gpt-4o-mini\", \n",
     "                   temperature=0 # a range from 0-2, the higher the value, the higher the `creativity`\n",
     "                  )\n",
     "\n",
@@ -299,12 +299,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "674dbfc3-5e90-4ad9-97ca-063eef38b9f4",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content=\"Apple Inc. is a multinational technology company headquartered in Cupertino, California. Founded in 1976 by Steve Jobs, Steve Wozniak, and Ronald Wayne, Apple is known for its innovative products, including the iPhone, iPad, Mac computers, Apple Watch, and Apple TV. The company also offers a range of services, such as the App Store, Apple Music, and iCloud. Renowned for its emphasis on design, user experience, and ecosystem integration, Apple has become one of the world's most valuable companies and a leader in the tech industry.\", response_metadata={'token_usage': {'completion_tokens': 114, 'prompt_tokens': 18, 'total_tokens': 132}, 'model_name': 'gpt-4o-mini', 'system_fingerprint': 'fp_611b667b19', 'finish_reason': 'stop', 'logprobs': None}, id='run-d6c67630-ffa0-4da6-9941-079de8e196f9-0')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.invoke(\"Tell me something about Apple Inc. Just a short summary\")"
    ]
