--- a/tutorial/Week-1/notebook.ipynb
+++ b/tutorial/Week-1/notebook.ipynb
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7f7fb3d0-40bf-43b7-831f-b710d7278aec",
    "metadata": {},
    "outputs": [],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "39e2079a-4283-4220-b5ad-1517b07deb39",
    "metadata": {},
    "outputs": [],
@@ -299,25 +299,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "674dbfc3-5e90-4ad9-97ca-063eef38b9f4",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AIMessage(content=\"Apple Inc. is a multinational technology company headquartered in Cupertino, California. Founded in 1976 by Steve Jobs, Steve Wozniak, and Ronald Wayne, Apple is known for its innovative products, including the iPhone, iPad, Mac computers, Apple Watch, and Apple TV. The company also offers a range of services, such as the App Store, Apple Music, and iCloud. Renowned for its emphasis on design, user experience, and ecosystem integration, Apple has become one of the world's most valuable companies and a leader in the tech industry.\", response_metadata={'token_usage': {'completion_tokens': 114, 'prompt_tokens': 18, 'total_tokens': 132}, 'model_name': 'gpt-4o-mini', 'system_fingerprint': 'fp_611b667b19', 'finish_reason': 'stop', 'logprobs': None}, id='run-d6c67630-ffa0-4da6-9941-079de8e196f9-0')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.invoke(\"Tell me something about Apple Inc. Just a short summary\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7961d05b-cbd0-43d5-9920-a9a7f994757a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = model.invoke(\"Tell me something about Apple Inc. Just a short summary\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e35a7d87-381d-41c5-82bd-75d66bd295ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output.content"
    ]
   },
   {
@@ -806,6 +815,16 @@
    "outputs": [],
    "source": [
     "format_instructions = output_parser.get_format_instructions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9aa6c36f-f730-4914-8281-b33e54986bf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "format_instructions"
    ]
   },
   {
@@ -1304,6 +1323,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f278753-e468-4605-9fcb-18761872051c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "content = \", \".join(recipe_test[0]['ingredients'])\n",
+    "\n",
+    "output = bm25_retriever.invoke(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8a3adc6-529b-4534-8f2a-a6504c7244aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8bb86a1-0125-4521-9d48-8bf72777cfe5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "968f8861-ef45-4bb6-8f7b-108ce055d98b",
    "metadata": {},
@@ -1318,7 +1369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --upgrade --quiet  wikipedia"
+    "# !pip install --upgrade --quiet  wikipedia"
    ]
   },
   {
@@ -1333,6 +1384,47 @@
     "wiki_retriever = WikipediaRetriever()\n",
     "\n",
     "docs = wiki_retriever.invoke(\"HUNTER X HUNTER\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df8e184a-bf82-4687-acd3-ee28ccf3890a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d145bd2-875d-4f0b-8bfc-1fff44c9a3ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 若是少於給定返回數量，則返回當前所有可得到文件\n",
+    "\n",
+    "docs = wiki_retriever.invoke(\"rice\")\n",
+    "len(docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98333101-de37-4203-9f2f-c9a42db21473",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "WikipediaRetriever?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "594d4f34-9d99-47ba-9f08-48ac5feb4a76",
+   "metadata": {},
+   "source": [
+    "By default, wikipedia retriever returns 3 documents."
    ]
   },
   {
@@ -1359,6 +1451,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7d36f78a-b55a-4e40-ab9c-9ea2151a5c38",
+   "metadata": {},
+   "source": [
+    "- weights: 控制權重\n",
+    "- 總返回文件數量等於個別檢索器 (retriever) 檢索文件數量"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "599b51aa-9c1b-4e4b-839f-9fb0bdac182d",
@@ -1379,7 +1480,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ensemble_retriever.invoke(\"rice\")"
+    "output = ensemble_retriever.invoke(\"rice\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2ef0492-cf23-4c52-9685-a7860ba645e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91847b0e-ef31-45da-88da-a93888cd0093",
+   "metadata": {},
+   "source": [
+    "- bm25_retriever 返回兩份\n",
+    "- wiki_retriever 返回兩份"
    ]
   },
   {
@@ -1452,6 +1572,45 @@
    "outputs": [],
    "source": [
     "len(docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3eb7982d-f1cb-4036-9317-dd7f96c5836a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "- bm25_retriever 返回五份\n",
+    "- wiki_retriever 返回兩份"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "792ac2d5-2284-426d-8894-c9aec4849a07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ensemble_retriever = EnsembleRetriever(\n",
+    "    retrievers=[bm25_retriever, wiki_retriever], weights=[0.1, 0.9]\n",
+    ")\n",
+    "\n",
+    "config = {\"configurable\": {\"bm25_k\": 10}}\n",
+    "docs = ensemble_retriever.invoke(\"rice\", config=config)\n",
+    "\n",
+    "len(docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "085c45ab-899b-4d21-9f57-7939f79fa4ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "- bm25_retriever 返回十份\n",
+    "- wiki_retriever 返回兩份"
    ]
   },
   {
