--- a/tutorial/Week-2/notebook.ipynb
+++ b/tutorial/Week-2/notebook.ipynb
@@ -62,7 +62,6 @@
     "model = ChatOpenAI(openai_api_key=os.environ['OPENAI_API_KEY'],\n",
     "                   model_name=\"gpt-4o-2024-05-13\", temperature=0)\n",
     "\n",
-    "\n",
     "with open(os.path.join(get_project_dir(), 'tutorial', 'Week-1', 'recipe_train.json'), 'r') as f:\n",
     "    recipe_train = json.load(f)"
    ]
@@ -102,8 +101,8 @@
     "# Define human prompt template\n",
     "\n",
     "system_prompt = PromptTemplate.from_template(\"\"\"You are an AI assistant as the best chef in the world. You have a great taste and\n",
-    "cooking skills like Gordon Ramsay. You should be able to come up with dish based on `suggested ingredient`, and tell us what extra ingredients \n",
-    "to be prepared by comparing the ingredients actually used in the cooking and the `existing ingredient`\n",
+    "cooking skills like Gordon Ramsay. You should be able to come up with a dish based on `suggested ingredient`, and tell us what extra ingredients \n",
+    "has to be prepared by comparing the ingredients actually used in the cooking and the `existing ingredient`\n",
     "\n",
     "The `suggested ingredients` are the ingredients suggested by some recipe. You have the freedom to add or remove ingredients to achieve the goal, \n",
     "but try to be as faithful to the `suggested ingredient` as possible. \n",
@@ -205,11 +204,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a992ee80-442c-488a-9f9b-ca88fc00be1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bbdbac4a-eca4-403d-8f81-98b69a14605c",
    "metadata": {},
    "outputs": [],
    "source": [
     "final_output = output_parser.parse(output.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bbe8161-4fb4-4bc6-98d8-2835b85fe839",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_output"
    ]
   },
   {
@@ -328,6 +347,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "df1d34a9-ca50-474d-9a23-3b46bbf91dff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'egg' == 'large egg'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c0fabdfd-8525-4445-8979-d7478442540a",
    "metadata": {},
    "outputs": [],
@@ -360,7 +389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_community.vectorstores import Chroma\n",
+    "from langchain_community.vectorstores import FAISS\n",
     "from langchain_community.embeddings import HuggingFaceEmbeddings\n",
     "\n",
     "\n",
@@ -378,10 +407,10 @@
     "### 1. Creating Embeddings (創建嵌入):\n",
     "\n",
     "- HuggingFaceEmbeddings is used to create embeddings (vector representations) for text data.\n",
-    "- The model all-MiniLM-L6-v2 from Hugging Face is specified to generate these embeddings. This model converts text into numerical vectors that capture the semantic meaning of the text.\n",
+    "- The model all-MiniLM-L6-v2 from HuggingFace is specified to generate these embeddings. This model converts text into numerical vectors that capture the semantic meaning of the text.\n",
     "\n",
     "- 使用 HuggingFaceEmbeddings 創建文本數據的嵌入（向量表示）。\n",
-    "- 指定 Hugging Face 的模型 all-MiniLM-L6-v2 來生成這些嵌入。此模型將文本轉換為數字向量，這些向量捕捉文本的語義。"
+    "- 指定 HuggingFace 的模型 all-MiniLM-L6-v2 來生成這些嵌入。此模型將文本轉換為數字向量，這些向量捕捉文本的語義。"
    ]
   },
   {
@@ -417,7 +446,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vectorstore = Chroma.from_documents(documents[:500], embedding=embedding)"
+    "vectorstore = FAISS.from_documents(documents[:500], embedding=embedding)"
    ]
   },
   {
@@ -650,8 +679,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Debug filter 出問題\n",
+    "\n",
     "retriever = vectorstore.as_retriever(\n",
-    "    search_type=\"similarity_score_threshold\", search_kwargs={\"score_threshold\": 0.5, \"filter\": {'cuisine': {'$eq':'mexican'}}}\n",
+    "    search_type=\"similarity_score_threshold\", search_kwargs={\"score_threshold\": 0.5}\n",
     ")"
    ]
   },
@@ -663,6 +694,28 @@
    "outputs": [],
    "source": [
     "retriever.invoke(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1378e993-bcb3-46b3-9a96-7172abb1d8c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enhanced_docs = vectorstore.similarity_search(query, k=5,\n",
+    "                                               filter={\"cuisine\": 'mexican'}\n",
+    "                                               )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abc38363-03dc-4887-93d1-eed68843e1bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enhanced_docs"
    ]
   },
   {
@@ -691,6 +744,16 @@
    "outputs": [],
    "source": [
     "retriever = vectorstore.as_retriever(search_type='mmr', search_kwargs={'k': 8, 'fetch_k': 50, 'lambda_mult': 0.1})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1ac9b37-cc38-46ae-8573-eba44157eecf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "retriever.invoke(query)"
    ]
   },
   {
@@ -813,6 +876,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f80d68f9-a5c7-46b2-b1fb-64fe8f530ef6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "81f21f8c-d2ca-4960-bb69-a59efaa45880",
    "metadata": {},
@@ -856,6 +929,36 @@
    "outputs": [],
    "source": [
     "joke = chain.invoke({\"topic\": \"ice cream\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c98ab297-c127-4e64-93f4-81f843efc958",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joke"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0aedd556-73a7-4a73-9220-82a9fadc7ce4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joke.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a621e272-9562-4970-90d0-4d36661905b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(joke.content)"
    ]
   },
   {
@@ -940,6 +1043,16 @@
    "outputs": [],
    "source": [
     "composed_chain.invoke({\"topic\": \"ice cream\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e362c88-1f82-42c5-8b61-96c18affddfd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(composed_chain.invoke({\"topic\": \"ice cream\"}))"
    ]
   },
   {
@@ -1089,6 +1202,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a58914c7-5864-4956-81c2-12b8e11f550e",
+   "metadata": {},
+   "source": [
+    "Oops, how to solve this error message?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "802dadc3-be5a-4067-82c5-8e4135f1f2cf",
@@ -1149,6 +1270,21 @@
     "\n",
     "runnable = RunnableParallel(\n",
     "    passed=RunnablePassthrough(),\n",
+    "    modified=lambda x: x[\"num\"] + 1,\n",
+    ")\n",
+    "\n",
+    "runnable.invoke({\"num\": 1})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b17236ef-98e2-47f4-8e39-5f478ddb7310",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "runnable = RunnableParallel(\n",
+    "    passed_2=RunnablePassthrough(),\n",
     "    modified=lambda x: x[\"num\"] + 1,\n",
     ")\n",
     "\n",
@@ -1264,6 +1400,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "928599c7-08cc-4bee-b322-6fae436a230b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "context"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d0fc80ed-af41-4571-8459-fbb962e6dc14",
    "metadata": {
@@ -1285,7 +1431,7 @@
    },
    "outputs": [],
    "source": [
-    "question = \"Show in all the ingredients.\""
+    "question = \"Show me all the ingredients.\""
    ]
   },
   {
@@ -1298,6 +1444,16 @@
    "outputs": [],
    "source": [
     "prompt_as_input = prompt.invoke({\"context\": context, \"question\": question})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60a62477-2bdd-480b-b69e-0f540cb60f32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt_as_input"
    ]
   },
   {
@@ -1323,6 +1479,16 @@
    "outputs": [],
    "source": [
     "output = model.invoke(prompt_as_input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ca52e14-eb67-44c8-a9cc-eb365c8a34cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(output.content)"
    ]
   },
   {
@@ -1388,6 +1554,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfd8bd65-33ee-4e3d-a436-d2830114d59c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain = RunnablePassthrough.assign(context=itemgetter(\"query\")|retriever) | prompt | model | output_parser\n",
+    "# {\"context\": itemgetter(\"query\")|retriever, \"question\":itemgetter(\"question\")}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "caa56017-c393-48f4-abcc-9698def7ffa2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain.invoke({\"query\": query, \"question\": question})"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5ae49836-d034-4463-ad1c-8347249d1f22",
    "metadata": {},
@@ -1427,14 +1614,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8ee7e51-2bec-4f25-ae1a-f5d1fec37e00",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "2e7f8d20-5dae-4335-8314-30ee8fd02836",
    "metadata": {},
@@ -1453,6 +1632,160 @@
    "outputs": [],
    "source": [
     "runnable.invoke({\"num\": 1})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f0c6e19-c233-432f-bc33-82ef3907df4f",
+   "metadata": {},
+   "source": [
+    "## Translation Template"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e97c917-9e88-4a53-9073-76c03d75b764",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_prompt = PromptTemplate.from_template('''You are an AI assistant with a Linquistic PhD degree and translation expert. \n",
+    "If you are not able to identify the language used by the given text, answer 'I do not know'.\n",
+    "''')\n",
+    "\n",
+    "# Define the response schema for translation\n",
+    "response_schemas = [\n",
+    "    ResponseSchema(name=\"translate\", description=\"the translated result\")]\n",
+    "\n",
+    "# Create an output parser based on the response schemas\n",
+    "output_parser = StructuredOutputParser.from_response_schemas(response_schemas)\n",
+    "\n",
+    "# Get format instructions from the output parser\n",
+    "format_instructions = output_parser.get_format_instructions()\n",
+    "\n",
+    "# Define a prompt template for text translation\n",
+    "prompt = PromptTemplate(template=\"Translate the product name to English: \\n\\n \"\n",
+    "                                 \"product: {product}\\n{format_instructions}\",\n",
+    "                        input_variables=['product'],\n",
+    "                        partial_variables={\"format_instructions\": format_instructions})\n",
+    "\n",
+    "# Create a human message prompt template\n",
+    "human_message = HumanMessagePromptTemplate(prompt=prompt)\n",
+    "\n",
+    "# Create a chat prompt template from system prompt and human message\n",
+    "chat_prompt = ChatPromptTemplate.from_messages([(\"system\", system_prompt.template),\n",
+    "                                                human_message])\n",
+    "\n",
+    "# Construct the processing chain\n",
+    "chain = chat_prompt | model | output_parser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cba56ee-d7c3-46b7-b04e-a16ab885bf91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain.invoke({\"product\": 'Сыворотка Ревиталифт Филлер для лица и шеи с 1,5% чистой гиалуроновой кислотой'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfc00810-dfd1-4ffc-a6fc-f34ded5e9dda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain.invoke({\"product\": 'Felt Liner Noir Infaillible Grip Precision'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ec646ea-4b86-4a4d-aa50-666364734e30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_prompt = PromptTemplate.from_template('''You are an AI assistant with native Chinese proficiency and translation expert. \n",
+    "If you are not able to identify the language used by the given text, answer 'I do not know'.\n",
+    "''')\n",
+    "\n",
+    "# Define the response schema for translation\n",
+    "response_schemas = [\n",
+    "    ResponseSchema(name=\"translate\", description=\"the translated result\")]\n",
+    "\n",
+    "# Create an output parser based on the response schemas\n",
+    "output_parser = StructuredOutputParser.from_response_schemas(response_schemas)\n",
+    "\n",
+    "# Get format instructions from the output parser\n",
+    "format_instructions = output_parser.get_format_instructions()\n",
+    "\n",
+    "# Define a prompt template for text translation\n",
+    "prompt = PromptTemplate(template=\"Translate the message to English: \\n\\n \"\n",
+    "                                 \"message: {product}\\n{format_instructions}\",\n",
+    "                        input_variables=['product'],\n",
+    "                        partial_variables={\"format_instructions\": format_instructions})\n",
+    "\n",
+    "# Create a human message prompt template\n",
+    "human_message = HumanMessagePromptTemplate(prompt=prompt)\n",
+    "\n",
+    "# Create a chat prompt template from system prompt and human message\n",
+    "chat_prompt = ChatPromptTemplate.from_messages([(\"system\", system_prompt.template),\n",
+    "                                                human_message])\n",
+    "\n",
+    "# Construct the processing chain\n",
+    "chain = chat_prompt | model\n",
+    "\n",
+    "chain.invoke({\"product\": \"老師這最後做出來可以怎麼運用?就是找不同國家的語言來學習嗎? 能不能用中文\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "913ad701-1448-44e2-9af8-7870c6a22398",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_prompt = PromptTemplate.from_template('''You are an AI assistant with a Linquistic PhD degree and translation expert. \n",
+    "If you are not able to identify the language used by the given text, answer 'I do not know'.\n",
+    "''')\n",
+    "\n",
+    "# Define the response schema for translation\n",
+    "response_schemas = [\n",
+    "    ResponseSchema(name=\"translate\", description=\"the translated result\")]\n",
+    "\n",
+    "# Create an output parser based on the response schemas\n",
+    "output_parser = StructuredOutputParser.from_response_schemas(response_schemas)\n",
+    "\n",
+    "# Get format instructions from the output parser\n",
+    "format_instructions = output_parser.get_format_instructions()\n",
+    "\n",
+    "# Define a prompt template for text translation\n",
+    "prompt = PromptTemplate(template=\"Translate the message to English: \\n\\n \"\n",
+    "                                 \"message: {product}\\n{format_instructions}\",\n",
+    "                        input_variables=['product'],\n",
+    "                        partial_variables={\"format_instructions\": format_instructions})\n",
+    "\n",
+    "# Create a human message prompt template\n",
+    "human_message = HumanMessagePromptTemplate(prompt=prompt)\n",
+    "\n",
+    "# Create a chat prompt template from system prompt and human message\n",
+    "chat_prompt = ChatPromptTemplate.from_messages([(\"system\", system_prompt.template),\n",
+    "                                                human_message])\n",
+    "\n",
+    "# Construct the processing chain\n",
+    "chain = chat_prompt | model | output_parser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eda406ca-7eec-4f75-86cd-a20b45bfa649",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain.invoke({\"product\": \"老師這最後做出來可以怎麼運用?就是找不同國家的語言來學習嗎? 能不能用中文\"})"
    ]
   },
   {
